fix height and position icon mobile

--- a/src/components/pages/myWhatsappClone.scss
+++ b/src/components/pages/myWhatsappClone.scss
@@ -45,7 +45,6 @@
 
     .list-mobile-container {
       width: 420px;
-      height: 960px;
     }
   }
 }
