--- a/src/components/views/ChatMobileView/chatMobileView.scss
+++ b/src/components/views/ChatMobileView/chatMobileView.scss
@@ -16,7 +16,7 @@
     align-items: center;
     position: absolute;
     left: 325px;
-    bottom: 110px;
+    bottom: 30px;
     background: #54A984;
     border-radius: 50%;
     width: 4rem;
